--- a/src/swl-calendar.scss
+++ b/src/swl-calendar.scss
@@ -613,8 +613,9 @@ swl-calendar::shadow .swl-calendar.day .day .sidebar {
 	width: 100%;
 	
 	display: grid;
-	grid-template-rows: 35vh 1fr;
-	grid-template-columns: 35vh 1fr;
+	grid-template-rows: minmax(min-content, 170px) 1fr;
+	//grid-template-rows: 35vh 1fr;
+	grid-template-columns: 35vh auto;
 	box-sizing: border-box;
 }
 
@@ -642,7 +643,7 @@ swl-calendar::shadow .swl-calendar.day .day .sidebar > .label :last-child {
 * DAY SIDEBAR MONTH
 */
 swl-calendar::shadow .swl-calendar.day .day .sidebar > .month {
-	min-width: 270px;
+	min-width: 280px;
 	height: inherit;
 	grid-row: 1;
 	grid-column: 2;
@@ -946,8 +947,6 @@ swl-calendar::shadow .swl-calendar.day .foreground .entry .notes {
 }
 swl-calendar::shadow .swl-calendar.day .foreground .entry .location {
 }
-
-
 
 
 
