--- a/src/swl-calendar.css
+++ b/src/swl-calendar.css
@@ -613,7 +613,8 @@ swl-calendar::shadow .swl-calendar.day .day .sidebar > .list::shadow .label {
   display: flex;
   flex-direction: row;
   flex-flow: wrap;
-  width: 100%; }
+  width: 100%;
+  border-bottom: 1px solid black; }
 
 swl-calendar::shadow .swl-calendar.day .day .sidebar > .list .label > div:first-of-type,
 swl-calendar::shadow .swl-calendar.day .day .sidebar > .list::shadow .label > div:first-of-type {
@@ -628,7 +629,8 @@ swl-calendar::shadow .swl-calendar.day .day .sidebar > .list::shadow p {
 
 swl-calendar::shadow .swl-calendar.day .day .sidebar > .list p > span:first-of-type,
 swl-calendar::shadow .swl-calendar.day .day .sidebar > .list::shadow p > span:first-of-type {
-  flex: 1; }
+  flex: 1;
+  padding-right: 20px; }
 
 /***********************
 * DAY CONTENT
