--- a/src/swl-calendar.css
+++ b/src/swl-calendar.css
@@ -1,23 +1,21 @@
 swl-calendar::shadow menu {
   margin: 0;
   padding: 0; }
+  swl-calendar::shadow menu button {
+    border: 1px solid black;
+    background-color: white; }
+  swl-calendar::shadow menu button.disabled {
+    background-color: #c8c8c8; }
 
 swl-calendar::shadow header {
   display: flex;
   flex-flow: row wrap;
   box-sizing: border-box;
-  width: 100%;
-  border-bottom: 1px solid green; }
+  width: 100%; }
 
 swl-calendar::shadow header > div {
   flex: 1;
   text-align: center; }
-
-swl-calendar::shadow header > menu:first-of-type {
-  border: 3px solid purple; }
-
-swl-calendar::shadow header > menu:last-of-type {
-  border: 3px solid blue; }
 
 swl-calendar::shadow .swl-calendar.year {
   display: flex;
